# PneumoDetectProject-1

./: .dockerignore  .env.development  .env.example  .gitignore  API_DOCUMENTATION.md  AUTHENTICATION_NAVIGATION_AUDIT.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COOKIES.md  DEPLOYMENT_READY_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_SUMMARY.md  FRONTEND_COMPLETION_REPORT.md  FRONTEND_INTEGRATION.md  INTERFACES_CHECK_FINAL.md  INTERFACES_SUMMARY.md  QUICK_START.md  README.md  README_PLAYWRIGHT.md  README_UI_INTERFACES.md  SECURITY_ENHANCEMENTS.md  SYSTEM_PRODUCTION_READINESS.md  UI_CHANGES_2025-11-19.md  UI_INTERFACE_AUDIT.md  VERSION.md  VISUAL_ELEMENTS_GUIDE.md  conftest.py  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  run.py  server.err  start.bat  (+13 more)
.github/workflows/: ci-cd.yml  playwright.yml
app/: __init__.py  config.py  models.py  utils.py
app/ml/: processor.py
app/routes/: admin.py  analysis.py  auth.py  doctor.py  main.py
app/static/: core.js  diagnostic.js  main.css
app/templates/: admin.html  doctor.html  forgot_password.html  index.html  login.html  patient.html  privacy.html  register.html  terms.html
migrations/versions/: 7d2061bda4f3_add_notifications_history_auditlog_.py  (+2 more)
playwright-report/: index.html
scripts/: analyze_traces.py  check_missing_analysis_images.py  collect_test_results.py  deep_analyze_traces.py  extract_playwright_report.py  inspect_playwright_yaml.py  normalize_eol.py  parse_playwright_yaml.py
tests/: ui.spec.js
